Fix for overlapping table

--- a/src/less/website/base.less
+++ b/src/less/website/base.less
@@ -266,11 +266,6 @@ pre.smstut, pre.voicetut, pre.pntut, .markdown-section pre{
   background-color: #272B2D;
   color: #fff;
 }
-th{
-  color: #fff;
-  background: #3a455c;
-  border:none !important;
-}
 .markdown-section code {
   padding: .3em;
   margin: 0;
